name:                lens-family-simple
version:             0.1.0.0
synopsis:            This module re-exports the main modules from Russell O'Connor's incredibly simple 
                     <http://hackage.haskell.org/package/lens-family-core lens-family-core> package, 
                     the original <http://r6.ca/blog/20120623T104901Z.html \'van Laarhoven lens\'> library. @Lens.Simple@ also re-exports @makeLenses@ and 
                     other TH incantations from Dan Burton's associated <http://hackage.haskell.org/package/lens-family-th lens-family-th>. 
                     .
                     The idea is just to make a lens-family equivalent of @import Control.Lens@, namely @import Lens.Simple@ 
                     -- it's even one character shorter! As an illustration, note that 
                     the wonderful <https://github.com/michaelt/lens-family-simple/blob/master/examples/Pong.hs pong example> from the @lens@ 
                     library requires only that change of imports. 
                     .
                     It should be kept in mind that the @zoom@ exported is specialized to @Control.Monad.Trans.State.Strict@ 
                     
-- description:         
homepage:            https://github.com/michaelt/lens-family-simple
license:             BSD3
license-file:        LICENSE
author:              michaelt
maintainer:          what_is_it_to_do_anything@yahoo.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Lens.Simple
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base, lens-family-core == 1.2.*, lens-family-th == 0.4.*
  -- hs-source-dirs:      
  default-language:    Haskell2010
