name:                lens-simple
version:             0.1.0.0
synopsis:            Re-exports sensible modules from Russell O'Connor's lens-family package.
-- description:         
homepage:            https://github.com/michaelt/lens-simple
license:             BSD3
license-file:        LICENSE
author:              michaelt
maintainer:          what_is_it_to_do_anything@yahoo.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Lens.Simple
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base, lens-family >=1.0
  -- hs-source-dirs:      
  default-language:    Haskell2010