name:                lens-simple
version:             0.1.0.3
synopsis:            simplified import of elementary lens-family combinators

description:         This module, <http://hackage.haskell.org/package/lens-simple/docs/Lens-Simple.html Lens.Simple>, 
                     just re-exports the main modules from Russell O\'Connor's 
                     <http://hackage.haskell.org/package/lens-family lens-family> 
                     package, the original <http://r6.ca/blog/20120623T104901Z.html van Laarhoven lens> library. 
                     @Lens.Simple@ also re-exports @makeLenses@ and 
                     other TH incantations from Dan Burton's associated 
                     <http://hackage.haskell.org/package/lens-family-th lens-family-th>. 
                     The idea is just to make a sort of low-powered, minimal-dependency @lens-family@ equivalent of 
                     .
                     > import Control.Lens
                     .
                     namely:
                     .
                     > import Lens.Simple
                     .
                     Check it out, it's even one character shorter! 
                     .
                     If you are unfamiliar with the use of van Laarhoven lenses, you might take a 
                     look at the excellent <http://www.serpentine.com/wreq/tutorial.html tutorial> 
                     for the <http://hackage.haskell.org/package/wreq wreq> 
                     library. The library uses some of the fancier material from the lens library, 
                     but all of the tutorial material will compile if you replace the dreaded 
                     @import Control.Lens@ with the elegant @import Lens.Simple@.
                     The point is academic, of course: you have already weighed down your 
                     sandbox with the @lens@ library by installing @wreq@ and if you get 
                     deeper into @wreq@ you will need @import Control.Lens@.
                     .
                     As another illustration of the power and natural intelligibility of the 
                     fundamental van Laarhoven lens combinators, note that the gloss 
                     <https://github.com/michaelt/lens-family-simple/blob/master/examples/Pong.hs pong example> 
                     from the @lens@ library examples directory requires only this 
                     abbreviating change of imports. 
                     If you care to make that program more complicated, 
                     you might at some point need 
                     the unfathomably more sophisticated material in @Control.Lens@. 
                     Within its more limited sphere, @lens-family@ accords as 
                     far as possible with @lens@, so this switch 
                     will often be all that is necessary to begin using them.
            
                     .
                     This module was originally intended to simplify the use of packages that 
                     follow the original promise of the van Laarhoven lenses, and export lenses 
                     without depending on a lens-library.
                     <http://hackage.haskell.org/package/pipes-bytestring pipes-bytestring> 
                     and <http://hackage.haskell.org/package/pipes-group pipes-group> are 
                     examples of best practices in this respect. Because of the heavily monadic
                     character of that material, only the combinators exported here are likely to
                     be of any use.
                     .
                     Note that many of the other lenses and combinators are a bit more 
                     specialized than their @Control.Lens@ equivalents: 
                     for example, _1 and _2 are here 
                     familiarly specialized to act just on real Haskell
                     pairs. With the loss of abstraction we also of course
                     lose the concomitant opaque error messages 
                     about @Field1 s t a b@ etc.

homepage:            https://github.com/michaelt/lens-simple
license:             BSD3
license-file:        LICENSE
author:              michaelt
maintainer:          what_is_it_to_do_anything@yahoo.com
copyright:           2012,2013,2014 Russell O'Connor, 2015 michaelt
category:            Lenses     
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
source-repository head
  type:     git
  location: https://github.com/michaelt/lens-simple    
    
library
  exposed-modules:     Lens.Simple
  build-depends:       base >= 4       && < 5
                       , lens-family == 1.2.*
                       , lens-family-core == 1.2.*
                       , lens-family-th == 0.4.*
  default-language:    Haskell2010
